# roulette-tree

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  explanation.html  index.html
css/: main.css
imgs/: Makefile
include/: array_roulette.h  linked_roulette.h  rtree.h
js/: explanation-pie1.js
src/: Makefile.am  array_roulette.c  array_roulette.h  linked_roulette.c  linked_roulette.h  main.c  main.h  rtree.c  rtree.h
test/: Makefile
test-suite/: Makefile.am  main.c  test.h  test_all_kept.c  test_consistent_fitness.c  test_duplicate_probabilities.c  test_duplicates.c  test_nonuniform_frequency.c  test_rb_invariants.c  test_uniform_frequency.c
test/include/: minunit.h
test/src/: main.c
